# DJango_VOD

./: .gitignore  db.sqlite3  pyproject.toml
blog/: db.sqlite3  pyproject.toml
blog/blog/: admin.py  cb_views.py  fbv_urls.py  forms.py  models.py  urls.py  views.py
blog/blog/migrations/: 0001_initial.py  0002_alter_blog_options_blog_author.py  0003_alter_blog_category.py  0004_comment.py  0005_alter_comment_options.py  0006_blog_image.py  0007_blog_thumbnail_alter_blog_image.py
blog/blog/templates/: base.html  blog_create.html  blog_detail.html  blog_list.html  blog_update.html
blog/config/: settings.py  urls.py
blog/member/: views.py
blog/templates/: base.html  blog_detail.html  blog_list.html  blog_update.html  form-js.html  pagination.html
blog/templates/registration/: login.html
blog/utils/: models.py
pystagram/: .gitignore  .gitignore_backup  db.sqlite3  pyproject.toml
pystagram/.config_secret/: secret.json
pystagram/config/: settings.py  urls.py
pystagram/member/: admin.py  forms.py  models.py  views.py
pystagram/member/migrations/: 0001_initial.py
pystagram/post/: admin.py  models.py  views.py
pystagram/post/migrations/: 0001_initial.py
pystagram/templates/: base.html
pystagram/templates/auth/: login.html  (+2 more)
pystagram/utils/: email.py  models.py
restaurant-reviews/: .gitignore  pyproject.toml
restaurant-reviews/config/: settings.py  urls.py
restaurant-reviews/restaurants/: models.py  serializers.py  tests.py  urls.py  views.py
restaurant-reviews/reviews/: models.py  tests.py
restaurant-reviews/users/: models.py  tests.py
(+58 files in other folders)
