[project]
name = "blog"
version = "0.1.0"
description = ""
authors = [
    {name = "JaeheeLee-be",email = "clodusky1@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "django (==5.0.4)",
    "ipython (>=9.11.0,<10.0.0)",
    "django-extensions (>=4.1,<5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
